--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==3.0.0
+flask==2.3.3
 flask-cors==4.0.0
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
+numpy==1.24.4
+scikit-learn==1.3.2
 gunicorn==21.2.0
+setuptools==68.2.2
+wheel
