--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+setuptools>=70.0
+wheel>=0.40
+pip>=25.3
+numpy>=1.26  # compatible with Python 3.13
+scikit-learn>=1.3.2
 flask==2.3.3
 flask-cors==4.0.0
-numpy==1.24.4
-scikit-learn==1.3.2
 gunicorn==21.2.0
-setuptools==68.2.2
-wheel
